finished the assignment except for image that isn't working properly

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form Validation</title>
     <link rel="stylesheet" href="style.css">
     <link
       rel="stylesheet"
@@ -14,8 +14,37 @@
 </head>
 <body>
     <div class="container">
+
+            <div class="content">
+                <div class="logo">
+                    <img src="https://svgshare.com/i/_go.svg" alt="" />
+                </div>
+
+                <div class="image"></div>
+                <div class="text">
+                    Start for free & get <br>
+                    attractive offers today!
+                </div>
+            </div>
         <form id="form">
-            <div class="title">Get Started</div>
+            <div class="social">
+                <div class="title">Get Started</div>
+                <div class="question">
+                    Already have an account? <br>
+                    <span>Sign in</span>
+                </div>
+                <div class="btn">
+                    <div class="btn-1">
+                        <img src="https://img.icons8.com/color/30/000000/google-logo.png" />
+                        Sign up
+                    </div>
+                    <div Class="btn-2">
+                        <img src="https://img.icons8.com/ios-filled/30/ffffff/facebook-new.png" />
+                        Sign up
+                    </div>
+                </div>
+                <div class="or">Or</div>
+            </div>
             <div>
                 <label for="username">User Name</label>
                 <i class="fas fa-user"></i>
@@ -31,6 +60,7 @@
                 <i class="far fa-check-circle success-icon"></i>
                 <div class="error"></div>
             </div>
+
             <div>
                 <label for="email">Email</label>
                 <i class="far fa-envelope"></i>
@@ -67,6 +97,6 @@
             <button id="btn" type="submit">Submit</button>
         </form>
     </div>
-    <script src="main.js"></script>
 </body>
+<script src="main.js"></script>
 </html>
