changed a few things

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       crossorigin="anonymous"
-    />
+      />
 </head>
 <body>
     <div class="container">
@@ -21,6 +21,7 @@
                 </div>
 
                 <div class="image"></div>
+                
                 <div class="text">
                     Start for free & get <br>
                     attractive offers today!
@@ -53,7 +54,7 @@
                     type="text"
                     name="username"
                     id="username"
-                    placeholder="Joy Shaheb"
+                    placeholder="First name Last name"
                 />
 
                 <i class="fas fa-exclamation-circle failure-icon"></i>
@@ -69,7 +70,7 @@
                     type="email"
                     name="email"
                     id="email"
-                    placeholder="abc@gmail.com"
+                    placeholder="blablabla@blabla.bla"
                 />
 
                 <i class="fas fa-exclamation-circle failure-icon"></i>
